--- a/main.css
+++ b/main.css
@@ -33,8 +33,8 @@ img {
 }
 
 img.profile-pic {
-	height: 30%;
-	width: 30%;
+	height: 100%;
+	width: 100%;
 	object-fit: cover;
 	border-radius:30px;
 }
@@ -124,10 +124,11 @@ img.profile-pic {
 
 .banner {
 	height: 30%;
+	overflow: hidden;
 }
 
 .primary-info {
-	height: 15%;
+	height: 38%;
 }
 
 .secondary-info {
@@ -164,7 +165,7 @@ img.profile-pic {
 }
 
 .bottom {
-	height: 23%;
+	height: 15%;
 }
 
 .button {
